--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JS Calculator</title>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<div class="calculator-container">
-			<div class="calculator-display"></div>
+			<div class="calculator-display">0</div>
+			<div class="calculator-buttons">
+				<button class="button plus">+</button>
+				<button class="button minus">-</button>
+				<button class="button times">&times;</button>
+				<button class="button divide">%</button>
+				<button class="button one">1</button>
+				<button class="button two">2</button>
+				<button class="button three">3</button>
+				<button class="button four">4</button>
+				<button class="button five">5</button>
+				<button class="button six">6</button>
+				<button class="button seven">7</button>
+				<button class="button eight">8</button>
+				<button class="button nine">9</button>
+				<button class="button zero">0</button>
+				<button class="button period">.</button>
+				<button class="button clear">C</button>
+				<button class="button equal">=</button>
+			</div>
 		</div>
 	</body>
 </html>
