positioned with grid and added pink theme

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JS Calculator</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="./styles/styles.css" />
 	</head>
 	<body>
 		<div class="calculator-container">
-			<div class="calculator-display">0</div>
+			<div class="calculator-display">69</div>
 			<div class="calculator-buttons">
 				<button class="button plus">+</button>
 				<button class="button minus">-</button>
@@ -24,7 +24,7 @@
 				<button class="button eight">8</button>
 				<button class="button nine">9</button>
 				<button class="button zero">0</button>
-				<button class="button period">.</button>
+				<button class="button decimal">.</button>
 				<button class="button clear">C</button>
 				<button class="button equal">=</button>
 			</div>
