updated color palette

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	</head>
 	<body>
 		<div class="calculator-container">
-			<div class="calculator-display">69</div>
+			<div class="calculator-display">0</div>
 			<div class="calculator-buttons">
-				<button class="button plus">+</button>
-				<button class="button minus">-</button>
-				<button class="button times">&times;</button>
-				<button class="button divide">%</button>
+				<button class="button plus utility">+</button>
+				<button class="button minus utility">-</button>
+				<button class="button times utility">&times;</button>
+				<button class="button divide utility">%</button>
 				<button class="button one">1</button>
 				<button class="button two">2</button>
 				<button class="button three">3</button>
@@ -24,8 +24,8 @@
 				<button class="button eight">8</button>
 				<button class="button nine">9</button>
 				<button class="button zero">0</button>
-				<button class="button decimal">.</button>
-				<button class="button clear">C</button>
+				<button class="button utility">.</button>
+				<button class="button utility">C</button>
 				<button class="button equal">=</button>
 			</div>
 		</div>
