html and css done, javascript started

--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JS Calculator</title>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Lato"
+		/>
 		<link rel="stylesheet" href="./styles/styles.css" />
+		<script src="./script.js" defer></script>
 	</head>
 	<body>
 		<div class="calculator-container">
 			<div class="calculator-display">0</div>
 			<div class="calculator-buttons">
-				<button class="button plus utility">+</button>
-				<button class="button minus utility">-</button>
-				<button class="button times utility">&times;</button>
-				<button class="button divide utility">%</button>
-				<button class="button one">1</button>
-				<button class="button two">2</button>
-				<button class="button three">3</button>
-				<button class="button four">4</button>
-				<button class="button five">5</button>
-				<button class="button six">6</button>
-				<button class="button seven">7</button>
-				<button class="button eight">8</button>
-				<button class="button nine">9</button>
-				<button class="button zero">0</button>
-				<button class="button utility">.</button>
-				<button class="button utility">C</button>
+				<button class="button plus operator">+</button>
+				<button class="button minus operator">-</button>
+				<button class="button times operator">&times;</button>
+				<button class="button divide operator">%</button>
+				<button class="button number one">1</button>
+				<button class="button number two">2</button>
+				<button class="button number three">3</button>
+				<button class="button number four">4</button>
+				<button class="button number five">5</button>
+				<button class="button number six">6</button>
+				<button class="button number seven">7</button>
+				<button class="button number eight">8</button>
+				<button class="button number nine">9</button>
+				<button class="button number zero">0</button>
+				<button class="button clear">C</button>
 				<button class="button equal">=</button>
 			</div>
 		</div>
