accesibility changes to html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<div class="calculator-container">
 			<div class="calculator-display">0</div>
 			<div class="calculator-buttons">
-				<button class="button plus operator">+</button>
-				<button class="button minus operator">-</button>
+				<button class="button plus operator">&plus;</button>
+				<button class="button minus operator">&minus;</button>
 				<button class="button times operator">&times;</button>
-				<button class="button divide operator">%</button>
+				<button class="button divide operator">&divide;</button>
 				<button class="button number one">1</button>
 				<button class="button number two">2</button>
 				<button class="button number three">3</button>
@@ -29,8 +29,8 @@
 				<button class="button number eight">8</button>
 				<button class="button number nine">9</button>
 				<button class="button number zero">0</button>
-				<button class="button clear">C</button>
-				<button class="button equal">=</button>
+				<button class="button clear">AC</button>
+				<button class="button equals">&equals;</button>
 			</div>
 		</div>
 	</body>
