last operator data attributte in html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="./script.js" defer></script>
 	</head>
 	<body>
-		<div class="calculator-container">
+		<div class="calculator-container" data-last-operator="none">
 			<div class="calculator-display">0</div>
 			<div class="calculator-buttons">
 				<button class="button plus operator">&plus;</button>
