--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Lato"
 		/>
-		<link rel="stylesheet" href="./styles/styles.css" />
+		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<script src="./script.js" defer></script>
 	</head>
 	<body>
