--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JS Calculator</title>
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Lato"
-		/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<script src="./script.js" defer></script>
 	</head>
 	<body>
-		<div class="calculator-container" data-last-operator="none">
+		<div class="calculator-container" data-last-operator="none" data-first-number="none" data-second-number="none">
 			<div class="calculator-display">0</div>
 			<div class="calculator-buttons">
 				<button class="button plus operator">&plus;</button>
@@ -28,8 +25,9 @@
 				<button class="button number seven">7</button>
 				<button class="button number eight">8</button>
 				<button class="button number nine">9</button>
+				<button class="button clear-all">AC</button>
 				<button class="button number zero">0</button>
-				<button class="button clear">AC</button>
+				<button class="button clear">C</button>
 				<button class="button equals">&equals;</button>
 			</div>
 		</div>
