--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>JS Calculator</title>
+		<title>js-calculator</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
 		<script src="./script.js" defer></script>
 	</head>
 	<body>
-		<div class="calculator-container" data-last-operator="none" data-first-number="none" data-second-number="none">
+		<div
+			class="calculator-container"
+			data-last-operator="none"
+			data-first-number="none"
+			data-second-number="none"
+		>
 			<div class="calculator-display">0</div>
 			<div class="calculator-buttons">
 				<button class="button plus operator">&plus;</button>
